# Lockdoor-Framework

./: .gitattributes  .gitignore  CNAME  Dockerfile  Lockdoor.py  README.md  README.rst  README_MD.md  Tools_install.sh  VERSION  _config.yml  git  install.sh  live.py  lock.html  lockdoor  lockdoor-2.7-test.py  lockdoor-3.6.py  lockdoor.conf  lockdoor.py  update.sh
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
ToolsResources/EXPLOITATION/CHEATSHEETS/: File_Transfers.md  file_inclusion_vulnerabilities.md  network_pivoting_techniques.md  networking_pivoting_and_tunneling.md  pivoting.md  pivoting_.md
ToolsResources/EXPLOITATION/Tools/: shellshock_shell.sh
ToolsResources/INFO-GATH/CHEATSHEETS/: dns_enumeration.md  scanning.md  smb_enumeration.md  smtp_enumeration.md  snmb_enumeration.md
ToolsResources/INFO-GATH/Tools/: namemash.py
ToolsResources/PASSWORD/CHEATSHEETS/: Some-Links-To-Wordlists-1.txt  password_attacks.md
ToolsResources/PASSWORD/wordlists/: big.txt  common.txt  euskera.txt  indexes.txt  small.txt  spanish.txt
ToolsResources/PASSWORD/wordlists/DirBuster/: DirBuster-1.0-RC1.bat
ToolsResources/PASSWORD/wordlists/vulns/: frontpage.txt  oas.txt  sharepoint.txt  tomcat.txt  weblogic.txt  websphere.txt
ToolsResources/POST-EXPL/CHEATSHEETS/: Cheatsheet_AVBypass.txt  Cheatsheet_BuildReviews.txt  code-execution-reverse-shell-commands.txt  important-linux-serv-files.txt
ToolsResources/PrivEsc/CHEATSHEETS/: linux_enumeration.md
ToolsResources/REPORT/TEMPLATES/: CherryTree_template.ctb  OSCP-OS-XXXXX-Exam-Report_Template3.2.docx  OSCP-OS-XXXXX-Lab-Report_Template3.2.docx
ToolsResources/REVERSE/CHEATSHEETS/: Buffer_Overflow_Exploit.md
ToolsResources/REVERSE/Tools/: trunt.py
ToolsResources/REVERSE/Tools/DLLRunner/: README.md  dllrunner.py
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/: AUTHORS  DUGSONGLICENSE.txt  INSTALL  LICENSES.txt  Makefile.am  Makefile.in  README  README.generic  README.msrpcfuzz  README.sunrpcfuzz  README.webmitm  SPIKE_Console.py  WEBFUZZING.txt  aclocal.m4  apachechunked.spk  base64.c  blockfuzz.py  blocktest1.spk  blocktest1_var.spk  buf.c  cifs  cifs.c  citrix.c  closed_source_web_server_fuzz.c  configure  configure.in  dceoversmb.c  dlargs.c  dlrpc.c  dltest.c  do_ntlm_brute.sh  do_post.c  do_wwwfuzz.sh  domsrpcfuzz.sh  domsrpcfuzz_udp.sh  dosmbfuzz.sh  form_fuzz.c  gen_send_tcp2.c  generic_chunked.c  generic_listen_tcp.c  (+63 more)
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/BIZTALK2000/: req1.spk
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/CIFS/: cifs1.spk  netbios1.spk~
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/COMPAQ/: survey.txt
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/FTPD/: ftpd1.spk
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/H323/: q931.spk
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/IMAP/: imap1.spk
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/MSContentManagementServer/: login.request  login.spk
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/MSSQL/: mssql.cap  mssql.spk
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/ORACLE/: tns.txt
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/POP3/: pop3.spk
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/PPTP/: pptp.spk
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/RealServer/: stream1.spk  stream1.txt
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/SMTP/: smtp1.spk  smtp2.spk  smtp3.spk  smtp5.spk
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/SSL/: ssl.spk
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/UPNP/: upnp1.spk
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/exchange2K/: notes  post11.spk  post11.txt  post13.spk  post15.txt  post16.spk  post17.spk  post17.txt  post18.txt  post20.txt  post21.txt  post22.spk  post22.txt  post24.spk  post24.txt  post25.spk  post26.spk  post26.txt  post27.spk  post27.txt  post8.spk  post8.txt  post9.spk  post9.txt
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/audits/lotus/: notes
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/libntlm-0.21/: HISTORY  README  ntlm.h  smb.h  smbdes.c  smbdes.h  smbencrypt.c  smbencrypt.h  smbmd4.c  smbmd4.h  smbutil.c
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/libntlm-0.21/test/: README  dumper.c  getargs.c  getargs.h
ToolsResources/REVERSE/Tools/spikepp/SPIKE/src/testscripts/: univar.spk
ToolsResources/SECURITY/CHEATSHEETS/: 404.html  index.html  sitemap.xml
ToolsResources/WALK/: OWASPv4_Checklist.xlsx  WALK
ToolsResources/WEB/CHEATSHEETS/: sqli-quries.txt  sqli-tips.txt  web_app_vulns_Arabic.md  xxe.md
ToolsResources/WEB/Tools/: allgrabber.py  jce.py  jce_v2.php  jmgrabber.py  wpgrabber.py
ToolsResources/WEB/Tools/dirb222/: Makefile.am  Makefile.in  README.txt  config.h.in  configure  configure.ac  dirb.1
ToolsResources/WEB/Tools/dirb222/docs/: CHANGES.txt  FAQ.txt  INSTALLATION.txt  TODO.txt  TRICKS.txt
ToolsResources/WEB/Tools/dirb222/gendict_src/: Makefile.am  Makefile.in  gendict.c
ToolsResources/WEB/Tools/dirb222/src/: Makefile.am  Makefile.in  calculanec.c  crea_wordlist.c  estructuras.h  funciones.h  get_url.c  get_url.h  global.h  http_codes.h  lanza_ataque.c  options.c  resume.c  utils.c  variables.h
ToolsResources/WEB/Tools/dirb222/utils/: clean_wordlist.sh  dirb2html.pl
ToolsResources/WEB/Tools/dirb222/web2dic/: web2dic.sh
docker/: Dockerfile
docs/: CODE_OF_CONDUCT.md§  CONTRIBUTING.md  ISSUE_TEMPLATE.md  pull_request_template.md
docs/README/: README-en.md
lockdoors/: __init__.py  about.py  encdyc.py  exploitation.py  infogathering.py  main.py  passattack.py  privesc.py  psafrt.py  reverse.py  sanitize.py  shells.py  shrts.py  soceng.py  update.py  webhack.py  wtpp.py
modules/: about.py  encdyc.py  exploitation.py  infogathering.py  main.py  passattack.py  privesc.py  psafrt.py  reverse.py  shells.py  soceng.py  update.py  webhack.py  wtpp.py
(+476 files in other folders)
