AUTOMAKE_OPTIONS = foreign

SUBDIRS = src gendict_src web2dic

man_MANS = dirb.1

EXTRA_DIST = TODO.txt CHANGES.txt README.txt LICENSE.txt dirb.1

CLEANFILES = core *.core *~ *.stackdump resume/* a.out a.exe

DISTCLEANFILES = dirb gendict dirb.exe gendict.exe autoconf.h stamp-auto-h autom4te.cache/* *.exe


