AC_INIT(spike.c)
AM_INIT_AUTOMAKE(spike, 2.9)

dnl Process this file with autoconf to produce a configure script.

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -lc:
AC_CHECK_LIB(c, main)
dnl Replace `main' with a function in -lssl:
AC_CHECK_LIB(ssl, main)

AC_CHECK_LIB(dl, dlopen, DL_LIB="-ldl")

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h malloc.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(select socket strdup strstr strtoul)

AC_SUBST(DL_LIB)
AC_OUTPUT(Makefile)

